--- a/lsp-server/package.json
+++ b/lsp-server/package.json
@@ -25,5 +25,8 @@
   "devDependencies": {
     "@types/node": "^20.5.7",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "fs": "^0.0.1-security"
   }
 }
