--- a/lsp-server/package.json
+++ b/lsp-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Stata LSP",
+  "name": "stata-lsp",
   "description": "Language Server Protocol for Stata do and ado files for neovim plugin",
   "author": "human-d3v (brytop05@proton.me)",
   "license": "MIT",
@@ -23,7 +23,8 @@
     "postinstall": "cd client && npm install && cd ../server && npm install && cd .."
   },
   "devDependencies": {
-    "@types/node": "^20.5.7",
+    "@types/node": "^20.17.14",
     "typescript": "^5.2.2"
-  }
+  },
+  "keywords": []
 }
