--- a/lsp-server/server/package.json
+++ b/lsp-server/server/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "REPLACE_ME",
-  "description": "REPLACE_ME",
+  "name": "stata lsp",
+  "description": "Language Server Protocol implementation for Stata's do and ado files",
   "version": "1.0.0",
-  "author": "REPLACE_ME",
+  "author": "human-d3v (brytop05@proton.me)",
   "license": "MIT",
   "engines": {
     "node": "*"
