Packaged plugin to be used by lazy (#1)
* Removed src

* removed test file

* Added plugin directory

* Moved functions to modules

* Updated check packages

* Mac separates PATH variables with colons

* changed naming convention for lsp

* Stoped invocation of stata_lsp immediately

* Added return statement

* Moved stata_lsp to module in lua

* fixing issues

* Added autocmd and augroup

* Removed module table

* fixed module remnants

* Cleaning up stata_lsp

* Added lsp publishing info

* Updated types

* fixed any type

* Fixed commands path

* Build path using path module instead of string

* changed encoding on path for commands

* Debugging lsp init

* Back to basics for debugging

* Changed setup and call

* removed setup table

* Added autocmd

* Fixed unclosed brackets

* Starting over fml

* Fixed the loading issue

* nested lsp and changed init. LSP is finally connecting correctly

* Updated import path in init for lsp

* Changed path to static string, not proud of that

* Added dev version of plugin to be able to diagnose issues more quickly

* Changed name of lockfile

* Toying with building server binary

* Updated for binary again

* Updated gitignore to ignore the binary

* Updated gitignore

* Used plenary to build lsp binary

* Added repl functionality and terminal spawn

* Updated README to reflect lazy packaging

--- a/lsp-server/package.json
+++ b/lsp-server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "REPLACE_ME",
-  "description": "REPLACE_ME",
-  "author": "REPLACE_ME",
+  "name": "stata-lsp",
+  "description": "Language Server Protocol for Stata do and ado files for neovim plugin",
+  "author": "human-d3v (brytop05@proton.me)",
   "license": "MIT",
   "version": "1.0.0",
   "publisher": "REPLACE_ME",
@@ -23,7 +23,8 @@
     "postinstall": "cd client && npm install && cd ../server && npm install && cd .."
   },
   "devDependencies": {
-    "@types/node": "^20.5.7",
+    "@types/node": "^20.17.14",
     "typescript": "^5.2.2"
-  }
+  },
+  "keywords": []
 }
